subjects/Programming Techniques/T2/Z1/.gcc.out
/rhome/r/rpolic1/workspace/TP/T2/Z1/main.cpp: In function ‘int main()’:
/rhome/r/rpolic1/workspace/TP/T2/Z1/main.cpp:36:77: error: expected ‘)’ before ‘;’ token
   for(int i(0); i < int(primes.size())-1; (std::cout << primes.at(i) << ", "; i++));
                                                                             ^
/rhome/r/rpolic1/workspace/TP/T2/Z1/main.cpp:36:77: error: expected ‘)’ before ‘;’ token
/rhome/r/rpolic1/workspace/TP/T2/Z1/main.cpp:36:79: error: ‘i’ was not declared in this scope
   for(int i(0); i < int(primes.size())-1; (std::cout << primes.at(i) << ", "; i++));
                                                                               ^
/rhome/r/rpolic1/workspace/TP/T2/Z1/main.cpp:36:82: error: expected ‘;’ before ‘)’ token
   for(int i(0); i < int(primes.size())-1; (std::cout << primes.at(i) << ", "; i++));
                                                                                  ^
